--- a/snappy/app/views/home/index.html.erb
+++ b/snappy/app/views/home/index.html.erb
@@ -3,3 +3,9 @@
 
 
 <a href="/auth/github">blhalala</a>
+
+<p><em>VIMEO USER SEARCH</em></p>
+<form id="search" action="/search_vimeo" method="POST">
+  <input type="text" name="search" placeholder="Search">
+  <input type="submit" value="Go!">
+</form>
