add sessions stuff

--- a/snappy/app/views/home/index.html.erb
+++ b/snappy/app/views/home/index.html.erb
@@ -3,7 +3,10 @@
 
 
 
-<a href="/auth/github">test auth</a>
+<a href="/auth/github">Sign-In with Github</a>
+<a href="/auth/twitter">DON'T Sign-In with Twitter</a>
+
+
 
 <p><em>VIMEO USER SEARCH</em></p>
 <form id="search" action="/search_vimeo" method="POST">
