move vimeo search form

--- a/snappy/app/views/layouts/application.html.erb
+++ b/snappy/app/views/layouts/application.html.erb
@@ -15,5 +15,11 @@
 
 <%= yield %>
 
+<p><em>VIMEO USER SEARCH</em></p>
+<form id="search" action="/search_vimeo" method="POST">
+  <input type="text" name="search" placeholder="Search">
+  <input type="submit" value="Go!">
+</form>
+
 </body>
 </html>
