--- a/snappy/app/views/feeds/search_vimeo.html.erb
+++ b/snappy/app/views/feeds/search_vimeo.html.erb
@@ -1,3 +1,8 @@
 <h2>Search Results</h2>
 
-<%= @vimeo_results %>
+<%= image_tag @vimeo_results["portrait_medium"] %>
+<%= @vimeo_results["display_name"] %>
+<%= @vimeo_results["location"] %>
+<%= link_to "URL", @vimeo_results["url"] %>
+<%= @vimeo_results["bio"] %>
+<%= button_to ""
