--- a/app/views/feeds/search_vimeo.html.erb
+++ b/app/views/feeds/search_vimeo.html.erb
@@ -1,4 +1,5 @@
 <h2>Search Results</h2>
+<%= @vimeo_results %>
 
 <%= image_tag @vimeo_results["portrait_medium"] %>
 <%= @vimeo_results["display_name"] %>
@@ -10,3 +11,7 @@
   <%= f.hidden_field :social_media, :value => "Vimeo" %>
   <%= f.submit "Subscribe", :class => "btn btn-default" %>
 <% end %>
+
+
+<% @handle = @vimeo_results["display_name"] %>
+<% @handle[-]
