Add Twitter search.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,3 +13,7 @@
   <input type="text" name="search" placeholder="Search">
   <input type="submit" value="Go!">
 </form>
+<br />
+
+<p><em>TWITTER USER SEARCH</em></p>
+<%= render "/twitter/search_form" %>
