--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
 
 <a href="/auth/github">Sign-In with Github</a>
 <a href="/auth/twitter">DON'T Sign-In with Twitter</a>
-
-<%= @fake %>
+<br>
+<% @feeds.each do |feed| %>
+  <% array = Vimeo::Simple::User.videos(feed.handle) %><br>
+  <%= titles = array.map { |video| video["title"] } %>
+<% end %>
