--- a/app/views/twitter/result.html.erb
+++ b/app/views/twitter/result.html.erb
@@ -1,3 +1,3 @@
 <% @twusers.each do |u| %>
-  <li> <%= u.screen_name %> </li>
+  <ul><li style="text-decoration: none;"> <%= u.screen_name %> </li></ul>
 <% end %>
