--- a/app/views/twitter/result.html.erb
+++ b/app/views/twitter/result.html.erb
@@ -1,3 +1,5 @@
-<% @twusers.each do |u| %>
-  <ul><li style="text-decoration: none;"> <%= u.screen_name %> </li></ul>
-<% end %>
+<ul>
+  <% @twusers.each do |u| %>
+    <li style="text-decoration: none;"> <%= u.screen_name %> </li>
+  <% end %>
+</ul>
