--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//
+// .media {
+//     // margin-left: 90px;
+//     // margin-bottom: 25px;
+//     // right:40px;
+//     // width:280px;
+//     // float: right;
+//
+//
+// }
+//
+.media img{
+
+  height: 100px;
+  padding: 4px;
+}
