--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 
-<a href="/auth/github">Sign-In with Github</a>
-<a href="/auth/twitter">DON'T Sign-In with Twitter</a>
+<div class="media">
+  <a href= "/auth/twitter"><img src = "twitter.png"></a>
+  <a href= "/auth/github"><img src = "Github.png"></a>
+</div>
 
 <br>
 
