--- a/app/views/feeds/search_vimeo.html.erb
+++ b/app/views/feeds/search_vimeo.html.erb
@@ -1,12 +1,23 @@
 <h2>Search Results</h2>
 
-<%= image_tag @vimeo_results["portrait_medium"] %>
-<%= @vimeo_results["display_name"] %>
-<%= @vimeo_results["location"] %>
-<%= link_to "Profile", @vimeo_results["profile_url"] %>
+<div class="wrap-vimeo-results">
+  <ul class="vimeo-feed">
+    <div class="col-xs-4">
+      <li><%= image_tag @vimeo_results["portrait_medium"] %></li>
+    </div>
 
-<%= form_for @feed, url: create_vimeo_feed_path, method: :post do |f| %>
-  <%= f.hidden_field :handle, :value => get_vimeo_handle(@vimeo_results["profile_url"]) %>
-  <%= f.hidden_field :social_media, :value => "Vimeo" %>
-  <%= f.submit "Subscribe", :class => "btn btn-default" %>
-<% end %>
+    <div class="col-xs-4">
+      <li><%= @vimeo_results["display_name"] %></li>
+      <li><%= @vimeo_results["location"] %></li>
+      <li><%= link_to "Profile", @vimeo_results["profile_url"] %></li>
+    </div>
+  </ul>
+
+    <%= form_for @feed, url: create_vimeo_feed_path, method: :post, :class => "col-xs-4" do |f| %>
+      <%= f.hidden_field :handle, :value => get_vimeo_handle(@vimeo_results["profile_url"]) %>
+      <%= f.hidden_field :social_media, :value => "Vimeo" %>
+      <%= f.submit "Subscribe", :class => "btn btn-default" %>
+    <% end %>
+
+
+</div>
