--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,20 @@
   <%= csrf_meta_tags %>
 
 </head>
+
 <body>
 
-<p><em>VIMEO USER SEARCH</em></p>
-<form id="search" action="/search_vimeo" method="POST">
-  <input type="text" name="search" placeholder="Search">
-  <input type="submit" value="Go!">
-</form>
+<div class="container">
 
-<%= yield %>
+  <p><em>VIMEO USER SEARCH</em></p>
+  <form id="search" action="/search_vimeo" method="POST">
+    <input type="text" name="search" placeholder="Search">
+    <input type="submit" value="Go!">
+  </form>
 
+  <%= yield %>
+  
+</div>
 
 </body>
 </html>
