Create feed action in twitter, routs for subscribe, add icons to results.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
-<a href="/auth/github">Sign-In with Github</a>
+<a href="/auth/github">Sign-In with Github</a><br />
 <a href="/auth/twitter">DON'T Sign-In with Twitter</a>
 
 <br>
