--- a/app/views/twitter/_search_form.html.erb
+++ b/app/views/twitter/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag "/search/twitter", method: :get do %>
   <%= label_tag :username, "Search" %> &nbsp;
-  <%= search_field_tag :username, "Search" %>
+  <%= search_field_tag :username, placeholder: "Search" %>
   <%= submit_tag "Go!" %>
 <% end %>
