--- a/app/views/twitter/result.html.erb
+++ b/app/views/twitter/result.html.erb
@@ -1,5 +1,7 @@
 <ul>
   <% @twusers.each do |u| %>
-    <li style="text-decoration: none;"> <%= u.screen_name %> </li>
+    <li style="text-decoration: none;">
+      <%= image_tag( u.profile_image_uri(size = :normal) )%>
+      <%= u.screen_name %> <%= button_to "Subscribe", feed_path(u.screen_name) %></li>
   <% end %>
 </ul>
