fix weird morning errors

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
+<p class="notice" ><%= notice %></p>
 
 <div class="media">
-  <a href= "/auth/twitter"><img src = "twitter.png"></a>
-  <a href= "/auth/github"><img src = "Github.png"></a>
+  <a href= "/auth/twitter"><%= image_tag "twitter.png" %></a>
+  <a href= "/auth/github"><%= image_tag "Github.png" %></a>
 </div>
 
 <br>
