--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
 <body>
 
 <div class="container">
-
+  <p><em><%= link_to "HOME", root_path %></em></p>
+  
   <p><em>VIMEO USER SEARCH</em></p>
   <form id="search" action="/search_vimeo" method="POST">
     <input type="text" name="search" placeholder="Search">
@@ -23,7 +24,7 @@
   </form>
 
   <%= yield %>
-  
+
 </div>
 
 </body>
