--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="media">
   <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
-  <a href= "/auth/github"><%=image_tag("Github.png")  %></a>=
+  <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
 </div>
 
 <br>
