--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+  <%= link_to "Log out", logout_path, method: :delete %>
 
 <div class="container">
   <p><em><%= link_to "HOME", root_path %></em></p>
-  
+
   <p><em>VIMEO USER SEARCH</em></p>
   <form id="search" action="/search_vimeo" method="POST">
     <input type="text" name="search" placeholder="Search">
