changes backround color

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,34 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+// *{
+//   border: 1px solid pink;
+// }
+
 ul.vimeo-feed {
   list-style-type: none;
 }
 
 .wrap-vimeo-results {
   width: 50%;
+}
+
+body {
+  background-image: url(image_path("bg_stars.gif"));
+  background-repeat: repeat
+}
+
+html{
+  margin: 15px;
+
+}
+
+body{
+  color: black;
+  margin: 0px;
+  padding:0;
+  padding-bottom: 40px;
+  margin-bottom: 20px;
+  min-height: 900px;
+
 }
