--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
 
 </head>
 
-<body>
+<body class="body">
 
 <div class="container">
   <p><em><%= link_to "HOME", root_path %></em></p>
-  
+
   <p><em>VIMEO USER SEARCH</em></p>
   <form id="search" action="/search_vimeo" method="POST">
     <input type="text" name="search" placeholder="Search">
