--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,18 @@
 
 <body class="body">
 
-<div class="container">
+<!-- <div class="search-container">
   <p><em><%= link_to "HOME", root_path %></em></p>
 
   <p><em>VIMEO USER SEARCH</em></p>
   <form id="search" action="/search_vimeo" method="POST">
     <input type="text" name="search" placeholder="Search">
     <input type="submit" value="Go!">
-  </form>
+  </form> -->
 
   <%= yield %>
 
-</div>
+<!-- </div> -->
 
 </body>
 </html>
