--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <p class="notice" ><%= notice %></p>
 
+
 <% if logged_in? %>
   <%= link_to "Log out", logout_path, method: :delete %>
 <% else %>
@@ -23,3 +24,5 @@
       <li>Watch on <#%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
   </ul>
 <#% end %> -->
+
+<a href= "/"><%=image_tag("planet_snappy.png")  %></a>
