--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
   <div class="media">
   <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
   <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+  <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
   <p><%= link_to "Log out", logout_path, method: :delete %></p>
 
   </div>
