--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
   <%= link_to "Log out", logout_path, method: :delete %>
 <% else %>
   <div class="media">
-    <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
-    <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+    <a href= "/auth/twitter"><%= image_tag("twitter.png") %></a>
+    <a href= "/auth/github"><%= image_tag("Github.png") %></a>
   </div>
 <% end %>
 
@@ -14,12 +14,12 @@
 <p><em>TWITTER USER SEARCH</em></p>
 <%= render "/twitter/search_form" %>
 
-<!-- <#% parse_vimeo %> -->
+<% parse_vimeo %>
 
-<!-- <#% @vimeos.each do |video| %>
+<% @vimeos.each do |video| %>
   <ul class="vimeo-feed">
-      <li><#%= video["user_name"] %> posted on <#%= video["upload_date"] %></li>
-      <li><iframe src="//player.vimeo.com/video/<#%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-      <li>Watch on <#%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
+      <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
+      <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
+      <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
   </ul>
-<#% end %> -->
+<% end %>
