--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,5 +45,10 @@
       <li>Watch on <#%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
   </ul>
 <#% end %> -->
+<div class="leftLogo">
+<a href= "/"><%=image_tag("planet_snappy_sm.png")  %></a>
+</div>
 
-<a href= "/"><%=image_tag("planet_snappy.png")  %></a>
+<div class="rightLogo">
+  <a href= "/"><%=image_tag("planet_snappy_sm_hz.png")  %></a>
+</div>
