Add subscription controller.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,9 +14,11 @@
 <p><em>TWITTER USER SEARCH</em></p>
 <%= render "/twitter/search_form" %>
 
-<!-- <#% parse_vimeo %> -->
 
-<!-- <#% @vimeos.each do |video| %>
+
+<!-- <#% parse_vimeo %>
+
+<#% @vimeos.each do |video| %>
   <ul class="vimeo-feed">
       <li><#%= video["user_name"] %> posted on <#%= video["upload_date"] %></li>
       <li><iframe src="//player.vimeo.com/video/<#%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
