so many changes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,12 +13,13 @@ ul.vimeo-feed {
   width: 50%;
 }
 
-
+.notice {
+  font-size: 1.2em;
+  color:#0affff;
+}
 
 html{
   margin: 15px;
-
-
 }
 
 body {
