--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,19 +37,20 @@
     <%= render "/twitter/search_form" %>
 </div>
 
-<% parse_vimeo %>
+<div class="feed">
+  <% parse_vimeo %>
 
-<% @vimeos.each do |video| %>
-  <ul class="vimeo-feed">
-      <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
-      <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-      <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
-  </ul>
-
-<% end %>
+  <% @vimeos.each do |video| %>
+    <ul class="vimeo-feed">
+        <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
+        <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
+        <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
+    </ul>
+  <% end %>
+</div>
 
 <div class="leftLogo">
-<a href= "/"><%=image_tag("planet_snappy_sm.png")  %></a>
+  <a href= "/"><%=image_tag("planet_snappy_sm.png")  %></a>
 </div>
 
 <a href= "/"><%=image_tag("planet_snappy.png")  %></a>
