--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,8 +62,6 @@ body {
 }
 
 
-
-
 .login {
   padding: 15px;
   background-color: #7FFF00;
@@ -71,6 +69,7 @@ body {
   // position:absolute;
   // top:0;
   // right:0;
+  margin-bottom: 1em;
   text-align: center;
   }
 
