fix some possible merge errors?

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,7 +67,7 @@ body {
 
 
 .login {
-  padding: 15px;
+  // padding: 15px;
   background-color: #7FFF00;
   // border: 1px solid pink;
   // position:absolute;
@@ -75,8 +75,11 @@ body {
   // right:0;
   margin-bottom: 1em;
   text-align: center;
-  }
+  height: 140px;
 
+
+
+}
 .media img{
 
   height: 50px;
