--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,28 +52,29 @@ body {
 }
 
 .search-container {
-  // background-image: url(image_path("pinkmonster.png")) ;
-  // background-repeat: repeat;
-  background-color: white;
+  background-image: url(image_path("greenstar.gif")) ;
+  background-repeat: repeat;
   margin-left: auto ;
   margin-right: auto ;
-  width: 200px ;
-  min-height: 225px;
+
+  min-height: 95px;
   text-align: center;
   font-weight: bold;
 
 
 }
 
+.searchbox{
+  display: inline-block;
+  text-align: center;
+}
+
 
 .login {
-  // padding: 15px;
-  background-color: #7FFF00;
-  // border: 1px solid pink;
-  // position:absolute;
-  // top:0;
-  // right:0;
-  margin-bottom: 1em;
+  background-image: url(image_path("greenstar.gif")) ;
+  background-repeat: repeat;
+
+  margin-bottom:0;
   text-align: center;
   height: 140px;
 
