--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,7 +56,8 @@ body {
   background-repeat: repeat;
   margin-left: auto ;
   margin-right: auto ;
-
+  margin-top:0px;
+  padding-top: 0px;
   min-height: 95px;
   text-align: center;
   font-weight: bold;
@@ -73,7 +74,6 @@ body {
 .login {
   background-image: url(image_path("greenstar.gif")) ;
   background-repeat: repeat;
-
   margin-bottom:0;
   text-align: center;
   height: 140px;
