--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,67 +1,41 @@
 
 
-<% if logged_in? %>
-  <div class= "login">
-    <div class="media">
-      <p>Authenticate</p>
-      <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
-      <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
-      <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
-      <p><%= link_to "Log out", logout_path, method: :delete %></p>
-    </div>
-  </div>
-
-
-<% else %>
-  <div class= "login">
-    <div class="media">
-      <p>Sign in with</p>
-      <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
-      <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
-      <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
-    </div>
-  </div>
-
-<% end %>
-
-
 
 <% if logged_in? %>
 <div class="search-container">
   <p><em><%= link_to "HOME", root_path %></em></p>
-
   <p class="notice" ><%= notice %></p>
 
-  <div class="searchbox"><p><em>VIMEO USER SEARCH</em></p>
+  <div class="searchbox">
+    <p><em>VIMEO USER SEARCH</em></p>
     <form id="search" action="/search_vimeo" method="POST">
       <input type="text" name="search" placeholder="Search">
       <input type="submit" value="Go!">
     </form>
   </div>
 
-  <div class="searchbox"><p><em>TWITTER USER SEARCH</em></p>
-    <%= render "/twitter/search_form" %></div>
+  <div class="searchbox">
+    <p><em>TWITTER USER SEARCH</em></p>
+    <%= render "/twitter/search_form" %>
   </div>
-  <% else %>
-  <div>
-  </div>
-  <% end %>
+
 </div>
+  <div class="feed">
+    <% if !@current_user.feeds.where(social_media: "Vimeo").empty? %>
 
-
-
-<% if !@current_user.feeds.where(social_media: "Vimeo").empty? %>
-<div class="feed">
-<% all_vimeos %>
-<% parse_vimeo %>
-<% @vimeos.each do |video| %>
-<ul class="vimeo-feed">
-<li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
-<li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-<li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
-</ul>
+          <% all_vimeos %>
+          <% parse_vimeo %>
+          <% @vimeos.each do |video| %>
+          <ul class="vimeo-feed">
+            <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
+            <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
+            <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
+          </ul>
+          <% end %>
+      <% else %>
+          <p class="no-vimeos">Search for Vimeo users to grow your feed!</p>
+      <% end %>
+    </div>
+<% else%>
+  <div></div>
 <% end %>
-<% else %>
-<p class="no-vimeos">Search for Vimeo users to grow your feed!</p>
-<% end %>
-</div>
