--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,36 @@
 
 </head>
 
+
+
+<% if logged_in? %>
+<div class= "login">
+  <div class="media">
+    <p>Authenticate</p>
+    <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
+    <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+    <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
+    <p><%= link_to "Log out", logout_path, method: :delete %></p>
+  </div>
+</div>
+
+
+<% else %>
+<div class= "login">
+  <div class="media">
+    <p>Sign in with</p>
+    <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
+    <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+    <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
+  </div>
+</div>
+
+<% end %>
+
+
+
+
+
 <br>
 
 
