--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
     <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
     <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
-    <a href= "/auth/instagram"><%=image_tag("yellow_fish.jpg")  %></a>
+    <a href= "/auth/instagram"><%=image_tag("Instagram.png")  %></a>
 
     <p><%= link_to "Log out", logout_path, method: :delete %></p>
   </div>
@@ -35,8 +35,8 @@
     <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
     <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
     <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
-    <a href= "/auth/instagram"><%=image_tag("yellow_fish.jpg")  %></a>
-    
+    <a href= "/auth/instagram"><%=image_tag("Instagram.png")  %></a>
+
   </div>
 </div>
 
