--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,10 +5,22 @@
 //   border: 1px solid pink;
 // }
 
-
-.wrap-vimeo-results {
-  width: 50%;
+h2 {
+  color: #ffffff;
 }
+.wrap-vimeo-results {
+  width: 70%;
+}
+
+.vimeo-result {
+  background-color: #ffffff;
+  width: 100%;
+  height: 140px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin: 10em;
+}
+
 
 .notice {
   font-size: 1.2em;
@@ -32,7 +44,7 @@ body {
   background-repeat: repeat;
 }
 
-.vimeo-feed {
+ul {
   list-style-type: none;
 }
 
