graceful fail if there are no Vimeo results

--- a/app/views/feeds/search_vimeo.html.erb
+++ b/app/views/feeds/search_vimeo.html.erb
@@ -17,7 +17,7 @@
         </div>
 
         <%= form_for @feed, url: create_vimeo_feed_path, method: :post, :class => "col-xs-4 subscribe-button" do |f| %>
-          <%= f.hidden_field :handle, :value => get_vimeo_handle(get_vimeo_handle(vimeo.url)) %>
+          <%= f.hidden_field :handle, :value => get_vimeo_handle(vimeo.url) %>
           <%= f.hidden_field :social_media, :value => "Vimeo" %>
           <%= f.hidden_field :id, :value => @feed.id %>
           <%= f.submit "Subscribe", :class => "btn btn-default" %>
