--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,36 @@
 <div class= "login">
   <div class="media">
     <p>Authenticate</p>
-    <a href= "/auth/twitter"><%=image_tag("twitter.png")  %></a>
-    <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
-    <a href= "/auth/vimeo"><%=image_tag("vimeo.png")  %></a>
-    <a href= "/auth/instagram"><%=image_tag("Instagram.png")  %></a>
+
+    <% if authenticated %>
+    <%=image_tag("checktwitter.png")  %>
+    <% else %>
+    <a href= "/auth/twitter"><%=image_tag("twitter.png") %></a>
+    <% end %>
+
+    <% if authenticated %>
+    <%=image_tag("checkgithub.png")  %>
+    <% else %>
+      <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+    <% end %>
+
+    <% if authenticated %>
+    <%=image_tag("checkvim.png")  %>
+    <% else %>
+    <a href= "/auth/vimeo"><%=image_tag("vimeo.png")   %></a>
+    <% end %>
+
+    <% if authenticated %>
+    <%=image_tag("checkinsta.png")  %>
+    <% else %>
+    <a href= "/auth/instagram"><%=image_tag("Instagram.png")   %></a>
+    <% end %>
+
+
+    <p>Start getting snappy, <%= User.find(session[:user_id]).name %></p>
 
     <p><%= link_to "Log out", logout_path, method: :delete %></p>
+
   </div>
 </div>
 
