--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,16 +22,8 @@
 </div>
   <div class="feed">
     <% if !@current_user.feeds.where(social_media: "Vimeo").empty? %>
+      <%= render "/home/vimeofeed" %>
 
-          <% all_vimeos %>
-          <% parse_vimeo %>
-          <% @vimeos.each do |video| %>
-          <ul class="vimeo-feed">
-            <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
-            <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-            <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
-          </ul>
-          <% end %>
       <% else %>
           <p class="no-vimeos">Search for Vimeo users to grow your feed!</p>
       <% end %>
