--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="searchbox">
     <p><em>VIMEO USER SEARCH</em></p>
-    <form id="search" action="/search_vimeo" method="POST">
+    <form id="search" action="/vimeos/search_vimeo" method="POST">
       <input type="text" name="search" placeholder="Search">
       <input type="submit" value="Go!">
     </form>
