--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,29 +19,32 @@
   <div class="media">
     <p>Authenticate</p>
 
-    <% if authenticated %>
+
+    <% if twitter_authenticated %>
     <%=image_tag("checktwitter.png")  %>
     <% else %>
     <a href= "/auth/twitter"><%=image_tag("twitter.png") %></a>
     <% end %>
 
-    <% if authenticated %>
+    <% if github_authenticated %>
     <%=image_tag("checkgithub.png")  %>
     <% else %>
-      <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
+    <a href= "/auth/github"><%=image_tag("Github.png")  %></a>
     <% end %>
 
-    <% if authenticated %>
+    <% if vimeo_authenticated %>
     <%=image_tag("checkvim.png")  %>
     <% else %>
     <a href= "/auth/vimeo"><%=image_tag("vimeo.png")   %></a>
     <% end %>
 
-    <% if authenticated %>
+    <% if instagram_authenticated %>
     <%=image_tag("checkinsta.png")  %>
     <% else %>
     <a href= "/auth/instagram"><%=image_tag("Instagram.png")   %></a>
     <% end %>
+
+
 
 
     <p>Start getting snappy, <%= User.find(session[:user_id]).name %></p>
