--- a/app/views/vimeos/_vimeofeed.html.erb
+++ b/app/views/vimeos/_vimeofeed.html.erb
@@ -2,8 +2,8 @@
 <% parse_vimeo %>
 <% @vimeos.each do |video| %>
   <ul class="vimeo-feed">
-    <li><%= video["user_name"] %> posted on <%= video["upload_date"] %></li>
+    <li><%= video["user_name"] %> posted on <%= (video["upload_date"]) %></li>
     <li><iframe src="//player.vimeo.com/video/<%= video["id"] %>" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-    <li>Watch on <%= link_to "Vimeo", video["url"], :target =>"_blank" %></li>
+    <li>Watch on <%= link_to "Vimeo", video["url"], target: "_BLANK" %></li>
   </ul>
 <% end %>
