--- a/app/views/vimeos/search_vimeo.html.erb
+++ b/app/views/vimeos/search_vimeo.html.erb
@@ -16,14 +16,14 @@
           <% if vimeo.location %>
             <li>Location: <%= vimeo.location %>
           <% end %>
-          <li><%= link_to "Profile on Vimeo", vimeo.url %></li>
+          <li><%= link_to "Profile on Vimeo", vimeo.url, target: "_BLANK" %></li>
         </div>
 
         <%= form_for @feed, url: create_vimeo_feed_path, method: :post, :class => "col-xs-4 subscribe-button" do |f| %>
           <%= f.hidden_field :handle, :value => get_vimeo_handle(vimeo.url) %>
           <%= f.hidden_field :social_media, :value => "Vimeo" %>
           <%= f.hidden_field :id, :value => @feed.id %>
-          <%= f.submit "Subscribe", :class => "btn btn-default" %>
+          <%= f.submit "Subscribe", :class => "btn btn-default choose" %>
         <% end %><br>
       </ul>
     <% end %>
