github feed prep

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,12 @@
   <p class="notice" ><%= notice %></p>
 
   <div class="searchbox">
+    <p><em>GITHUB USER SEARCH</em></p>
+
+  </div>
+
+
+  <div class="searchbox">
     <p><em>VIMEO USER SEARCH</em></p>
     <form id="search" action="/vimeos/search_vimeo" method="POST">
       <input type="text" name="search" placeholder="Search">
