--- a/app/views/vimeos/search_vimeo.html.erb
+++ b/app/views/vimeos/search_vimeo.html.erb
@@ -20,9 +20,9 @@
         </div>
 
         <%= form_for @feed, url: create_vimeo_feed_path, method: :post, :class => "col-xs-4 subscribe-button" do |f| %>
-          <%= f.hidden_field :handle, :value => get_vimeo_handle(vimeo.url) %>
-          <%= f.hidden_field :social_media, :value => "Vimeo" %>
-          <%= f.hidden_field :id, :value => @feed.id %>
+          <%= f.hidden_field :handle, :id => "hiddenHandle", :value => get_vimeo_handle(vimeo.url) %>
+          <%= f.hidden_field :social_media, :id => "hiddenSM", :value => "Vimeo" %>
+          <%= f.hidden_field :id, :id => "hiddenID", :value => @feed.id %>
           <%= f.submit "Subscribe", :class => "btn btn-default choose" %>
         <% end %><br>
       </ul>
