--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,10 @@
 
   <div class="searchbox">
     <p><em>GITHUB USER SEARCH</em></p>
+    <form id="search" action="/github/search_github" method="POST">
+      <input type="text" name="search" placeholder="Search">
+      <input type="submit" value="Go!">
+    </form>
 
   </div>
 
