--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 
 <% if logged_in? %>
 <div class= "login">
+  <div class="home"><a href="/"> <%= image_tag "planet_logo.png", size:"200x120"
+  %></a></div>
+
   <div class="media">
     <p>Authenticate</p>
 
