consumes instagram api

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,6 +19,11 @@
     <%= render "/twitter/search_form" %>
   </div>
 
+  <div class="searchbox">
+    <p><em>INSTAGRAM USER SEARCH</em></p>
+    <%= render "instagram/search_form" %>
+  </div>
+
 </div>
   <div class="feed">
 
