--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -110,7 +110,7 @@ h2 {
 }
 
 .vimeo-result {
-  background-color: #ffffff;
+  background-image: url(image_path("greenstar.gif")) ;
   width: 100%;
   height: 140px;
   padding-top: 1em;
@@ -133,5 +133,5 @@ h2 {
 }
 
 .chosen {
-  background-color: #8fe7ac;
+  background-image: url(image_path("noodle.gif")) ;
 }
