--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -107,18 +107,33 @@ h2 {
 
 .wrap-vimeo-results {
   width: 70%;
+  margin: 0 auto;
 }
 
 .vimeo-result {
   background-image: url(image_path("greenstar.gif")) ;
-  width: 100%;
-  height: 140px;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  margin: 10em;
+  width: 50em;
+  height: 112px;
+  padding-top: .1em;
+  padding-bottom: .1em;
+  margin: 1.5em;
 }
 
+.items {
+  color: #000000;
+  background-color: #ffffff;
+  font-weight: bold;
+}
 
+// .vimeo-result a {
+//   color: #000000;
+//   background-color: #ffffff;
+//   font-weight: bold;
+// }
+
+.choose .delete button {
+  padding-top: 1em;
+}
 .notice {
   font-size: 1.2em;
   color: #f15a35;
@@ -133,5 +148,5 @@ h2 {
 }
 
 .chosen {
-  background-image: url(image_path("noodle.gif")) ;
+  background-image: url(image_path("noodle2.gif")) ;
 }
