--- a/app/views/twitter/result.html.erb
+++ b/app/views/twitter/result.html.erb
@@ -2,7 +2,9 @@
   <% @twusers.each do |u| %>
     <li style="text-decoration: none;">
       <%= image_tag( u.profile_image_uri(size = :normal) )%>
-      <%= u.screen_name %> <%= button_to "Subscribe", feed_path(u.screen_name),
-        form_class: "btn btn-default" %></li><br />
+      <%= u.screen_name %> <%= button_to "Subscribe", feed_path(u.screen_name), class: "btn btn-success choose twubmit " %></li><br />
   <% end %>
 </ul>
+<div class="span6 subd">
+    Blue Rectangle
+</div>
