--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,7 @@
 </div>
 
   <div class="feed">
+    <h2>Your Vimeo Feed</h2>
 
     <% if !@current_user.feeds.where(social_media: "Vimeo").empty? %>
       <%= render "/vimeos/vimeofeed" %>
