add search results for instagram

--- a/app/views/instagram/_search_form.html.erb
+++ b/app/views/instagram/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/search/instagram", method: :get do %>
+<%= form_tag "/instagram/search", method: :get do %>
 <%= search_field_tag :username, nil ,placeholder: "Search" %>
 <%= submit_tag "Go!" %>
 <% end %>
