--- a/app/views/vimeos/search_vimeo.html.erb
+++ b/app/views/vimeos/search_vimeo.html.erb
@@ -11,7 +11,7 @@
             <li><%= image_tag "no-profile.png", class: "vimeo-profile-pic" %></li>
           <% end %>
         </div>
-        <div class="vimeo-column col-xs-4">
+        <div class="vimeo-column middle col-xs-4">
           <li class="items">Name: <%= vimeo.name %></li>
           <li class="items">Username: <%= get_vimeo_handle(vimeo.url) %></li>
           <% if vimeo.location %>
