--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,12 @@
   <div class="home"><a href="/"> <%= image_tag "planet_logo.png", size:"200x120"
   %></a></div>
 
+  <div class="my-account">
+    <%= link_to "MY ACCOUNT", my_account_path %>
+  </div>
+  
   <div class="media">
-    
+
     <p>Authenticate</p>
 
 
